# AILEE-Runtime-Protocol

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  ailee_config.json  fix.py  missing_files.txt  missing_srcs.txt  patch.diff  patch_bindings_cpp.py  patch_bindings_cpp2.py  patch_bindings_h.sh  patch_schema.sh  plan.md  policy.json  render.yaml  v12_build_hash.txt  v12_build_manifest.json  v12_epoch_state_roots.json  v12_frozen_genesis.json  v12_reexecution_hash.txt  v12_reexecution_manifest.json  wave_epoch_phase_state_machine.cpp  wave_epoch_phase_state_machine.hpp  wave_identity_phase_binding.cpp  wave_identity_phase_binding.hpp  wave_mesh_integration.cpp  wave_mesh_integration.hpp  wave_native_network_core.cpp  wave_native_network_core.hpp  wave_native_routing_layer.cpp  wave_native_routing_layer.hpp  wave_phase_propagation.cpp  wave_phase_propagation.hpp  wave_resonance_profiles.cpp  wave_resonance_profiles.hpp
.github/workflows/: ci.yml
api/: l2_client.py  main.py
api/routers/: __init__.py  energy.py  replay.py  state.py
archive/: fix_impls5.sh  fix_impls6.sh  fix_orchestrator2.patch  patch_federation.sh  patch_ffi.sh  patch_taproot.sh  patch_zk.sh
data/reorg_db/: LOG  LOG.old.1783553386070532  LOG.old.1783553899702573  LOG.old.1783553929042538  LOG.old.1783553929043133  LOG.old.1783553988286274  LOG.old.1783554018406657  LOG.old.1783554018407209  LOG.old.1783554051650802  LOG.old.1783554085648015  LOG.old.1783554085648601  MANIFEST-000031  OPTIONS-000029
docs/: API_QUICKSTART.md  AUDIT_REPORT.md  IMPLEMENTATIONAL_SUMMARY2.md  PROTOCOL_FORMALIZATION_V32.md  README_V12_REPRODUCIBILITY.md  SECURITY_PUBLIC_REPO.md  wave_mesh_integration.md  wave_native_network_core_architecture.md
docs/architecture/: ailee_core_protocol.md  ambient_ai_primitives_spec.md  ambient_l2_consensus_layer.md  ambient_mesh_networking_layer.md  ambient_node_mode_design.md  ambient_participation_proofs.md  ambient_runtime_integration_layer.md  bitcoin_anchoring_layer_spec.md  v11_wave_native_network.md
docs/v12/: fixed_inputs.md  genesis_freeze.md
examples/: example_node_sidecar.cpp  example_wallet_integration.cpp
include/: AILEEWebServer.h  AmbientAI-Core.h  AmbientAI.h  BlockProducer.h  BuildInfo.h  ConfigInfo.h  Global_Seven.h  HeartbeatLog.h  L1Reflection.h  L2State.h  MeshCoherence.h  NodeIdentity.h  Orchestrator.h  ProverSwarm.h  ReflectionLayer.h  ReorgDetector.h  SettlementIngestion.h  StateLog.h  SwarmHttpServer.h  ailee_api.hpp  ailee_netflow.h  ailee_rust_ffi.h  ambient_ai_bitcoin_node_view.hpp  ambient_ai_consensus_benefits.hpp  ambient_ai_consensus_ordering_rules.hpp  ambient_ai_consensus_state_machine.hpp  ambient_ai_energy_model.hpp  ambient_ai_epoch.hpp  ambient_ai_event_commitment.hpp  ambient_ai_global_coordination.hpp  ambient_ai_internet_extension.hpp  ambient_ai_l2_consensus_model.hpp  ambient_ai_l2_merkleization.hpp  ambient_ai_mesh_neighborhood.hpp  ambient_ai_mesh_p2p_integration.hpp  ambient_ai_mesh_participation.hpp  ambient_ai_mesh_prerequisites.hpp  ambient_ai_mesh_protocol.hpp  ambient_ai_mesh_routing_engine.hpp  ambient_ai_node_config.hpp  (+18 more)
include/anchor/: AnchorCommitTxBuilder.h  AnchorCommitValidator.h
include/kernel/: Hooks.h
include/l1_sync/: bitcoin_clock.hpp  mainnet_sync.hpp  reorg_detector.hpp  replay_input.hpp  sync_events.hpp
include/l2/: EpochScheduler.h  ExecutionContext.h  ExecutionContext.h.orig  ExecutionEnvelope.h  RecoveryPayload.h  StateRootPipeline.h
include/l3/: GossipEnvelope.h  GossipLayer.h  NetworkBinding.h  PeerSync.h
include/l4/: ClusterFederationView.h  ClusterSim.h  ClusterTypes.h  DeterministicScheduler.h  DeterministicSchedulerState.h  DeterministicTelemetry.h  DeterministicTransport.h  FederationConfig.h  MeshAnchor.h  MultiClusterSim.h  ReplayBuffer.h  ReplayEngine.h  ReplayTick.h  StateRootPropagation.h
include/l5/: CompressionConfig.h  DeterministicCompressor.h
include/l6/: AnchorSerializer.h  AnchorVerifier.h  AnchorZKMetadata.h  BitcoinClock.h  DeterministicEpochAnchoring.h  Exceptions.h  ExternalSchema.h  ExternalSchema.h.orig  Halo2Backend.h  IslaRuntimeOrchestrator.h  IslaRuntimeOrchestrator.h.orig  JsonBindings.h  JsonBindings.h.orig  MeshCoherenceEngine.h  OnChainReplayVerifier.h  ParameterGovernor.h  PlonkBackend.h  ProofScheduling.h  ReplayBuffer.h  RuntimeEnvironment.h  StateRootBuilder.h  ZKBackendFactory.h  ZKDeterministicValidator.h  ZKMetadata.h  ZKMockBackend.h  ZKOrchestrationManager.h  ZKProvingBackend.h  ZKRecursionManager.h
include/mesh/: MeshView.h
include/nlohmann/: json.hpp
include/policy/: PolicyEngine.h
include/runtime/: BitVMInterpreter.h  StateProjection.h
include/semantics/: AttachmentSemantics.h  BackendActivationSemantics.h  ClockSemantics.h  EpochSemantics.h  (+4 more)
notes/: hardening_report.md  plan.md
scripts/: generate_build_metadata.py  verify_build_hashes.py
simulations/: aille_energy_simulation.py
src/: AILEEWebServer.cpp  AmbientAI-Core.cpp  AmbientAI.cpp  MeshCoherence.cpp  NodeIdentity.cpp  ReflectionLayer.cpp  config_loader.cpp  main.cpp
src/rust_prover/: Cargo.toml
src/rust_prover/src/: lib.rs
swarm_db/: LOG  LOG.old.1783553386055284  LOG.old.1783553899675261  LOG.old.1783553929040155  LOG.old.1783553929041417  LOG.old.1783553988269303  LOG.old.1783554018404697  LOG.old.1783554018405951  LOG.old.1783554051633631  LOG.old.1783554085646145  LOG.old.1783554085647322  MANIFEST-000033  OPTIONS-000031
tests/: AdapterRegistryTests.cpp  BitVMInterpreterTests.cpp  MeshCoherenceTests.cpp  MeshViewTests.cpp  NodeIdentityTests.cpp  ReflectionLayerTests.cpp  SettlementIngestionTests.cpp  test_anchor_commit_signing.cpp  test_anchor_commit_tapleaf.cpp  test_anchor_commit_txbuilder.cpp  test_anchor_commit_validator.cpp  test_anchor_metadata.cpp  test_energy_config.cpp  test_energy_runtime.cpp  test_energy_simulation.py  test_isla_semantics.cpp  test_v35_capabilities.cpp  test_v35_gateway.py
tools/: build_verifier.py  epoch_inspector.py  genesis_extractor.cpp  state_root_comparator.py  wave_network_helper.py
web/: dashboard.js  dashboard.json  index.html
(+269 files in other folders)
