[package]
name = "ailee_rust_prover"
version = "0.1.0"
edition = "2021"

[lib]
name = "ailee_rust_prover"
crate-type = ["cdylib", "staticlib"]

[dependencies]
halo2_proofs = "0.3.0"
halo2curves = "0.10.0"
ff = "0.13.0"
sha2 = "0.10.8"
libp2p = "0.53.2"
tokio = { version = "1", features = ["full"] }
